--- a/src/components/Banner/styles.module.scss
+++ b/src/components/Banner/styles.module.scss
@@ -1,4 +1,5 @@
 @import "src/styles/mixins";
+@import "../../styles/colors";
 
 .banner {
   margin: 200px auto;
@@ -84,5 +85,84 @@
   &:hover {
     cursor: pointer;
     opacity: .8;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .banner {
+    box-sizing: border-box;
+    margin: 50px 0 150px;
+
+    &__sticker {
+      height: 50px;
+      background-color: #269AFF;
+    }
+
+    &__content {
+      box-sizing: border-box;
+      padding: 25px 15px 40px;
+      max-height: 230px;
+
+      border-radius: 0;
+    }
+
+    &__description {
+      font-size: 26px;
+      font-weight: 500;
+      line-height: 40px;
+
+      margin: 30px 0 30px;
+
+      width: 100%;
+    }
+
+    &__image {
+      width: 60px;
+
+      position: absolute;
+      top: 0;
+    }
+  }
+
+  .form {
+    max-width: 100%;
+    background-color: #269AFF;
+  }
+
+  .fieldset {
+    flex-direction: column;
+    height: auto;
+    padding: 10px 5px;
+  }
+
+  .inputLabel {
+    border: 1px solid $gray-cards;
+    border-radius: 10px;
+
+    width: 100%;
+    height: 50px;
+
+    margin-bottom: 20px;
+
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  .input {
+    height: 100%;
+    width: 100%;
+
+    padding: 0;
+
+    &::placeholder {
+      font-size: 20px;
+      text-align: center;
+    }
+  }
+
+  .button {
+    width: 100%;
+    min-height: 50px;
   }
 }
