--- a/src/components/Blog/styles.module.scss
+++ b/src/components/Blog/styles.module.scss
@@ -1,4 +1,5 @@
 @import "src/styles/colors";
+@import "../../styles/mixins";
 
 .blog {
   width: 100%;
@@ -22,24 +23,20 @@
 }
 
 .title {
+  @include section-title;
+  font-weight: 600;
   font-size: 56px;
-  text-decoration: none;
-  color: $black;
+  margin: 0 0 30px;
+  line-height: 36px;
 
-  width: 700px;
-  margin: 0;
-
-  transition: all .2s ease-in-out;
-
-  &:hover {
-    opacity: .8;
-    scale: 1.002;
+  &-line:first-of-type {
+    margin-right: 10px;
   }
 }
 
 .subtitle {
   width: 500px;
-  margin: 30px 0 50px;
+  margin: 0 0 50px;
   font-size: 18px;
   font-weight: 200;
   color: $gray-blog;
