--- a/src/components/FAQ/styles.module.scss
+++ b/src/components/FAQ/styles.module.scss
@@ -38,3 +38,26 @@
         }
     }
 }
+
+@media screen and (max-width: 420px) {
+    .FAQ {
+        margin-top: 40px;
+
+        &__wrapper {
+            padding: 0 15px;
+        }
+
+        &__title {
+            text-align: left;
+            font-size: 30px;
+            line-height: 34px;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+
+        &__questions {
+            font-size: 18px;
+            line-height: 26px;
+        }
+    }
+}
